--- a/src/App.css
+++ b/src/App.css
@@ -58,11 +58,37 @@ body {
 
 }
 
+.container .battle {
+	width: 100%;
+	background-color: white;
+	background-clip: border-box;
+	border: 1px solid rgba(0,0,0,0.125);
+	border-radius: 0.25rem;
+	box-shadow: 0 0.125rem 0.25rem rgba(0,0,0,0.075);
+	overflow: hidden;
+	margin-bottom: 20px;
+}
+
+.container .battle button {
+	color: blue;
+}
+
+.container .battle p {
+	text-transform: uppercase;
+	font-weight: bold;
+	color: white;
+	letter-spacing: 4px;
+	text-shadow: 0 0.125rem 0.25rem rgba(0,0,0,0.4);
+}
+
+
 .container .pokemon_name {
 	background-color: #ecd018;
 	text-align: center;
 	padding: 10px;
 }
+
+
 
 .container .pokemon_name p {
 	text-transform: uppercase;
