--- a/src/App.css
+++ b/src/App.css
@@ -24,8 +24,8 @@ body {
 	/*line height is like line spacing in word*/
 	line-height: 1;
 	font-family: "Roboto", sans-serif;
-	color: #202020;
-	background-color: #fbfbfb;
+	color: white;
+	background-color: #181818;
 	font-smooth: always;
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
@@ -33,6 +33,15 @@ body {
 
 /* Pokemon app
 ====================*/
+
+.custom-nav {
+	background-color: #ecd018;
+	box-shadow: 0 0.125rem 0.25rem rgba(0,0,0,0.075);
+	
+}
+
+
+
 
 .container {
 	display: flex;
@@ -43,8 +52,10 @@ body {
 }
 
 .container p {
-	margin: 0;
+	margin: 6px;
 }
+
+
 
 .container .pokemon {
 	width: 49%;
@@ -52,33 +63,70 @@ body {
 	background-clip: border-box;
 	border: 1px solid rgba(0,0,0,0.125);
 	border-radius: 0.25rem;
-	box-shadow: 0 0.125rem 0.25rem rgba(0,0,0,0.075);
+	box-shadow: 0 0.125rem .75rem rgba(255,255,255,100);
 	overflow: hidden;
 	margin-bottom: 20px;
 
 }
 
-.container .battle {
+.container #Battle {
+	text-align: center;
+	font-weight: bold;
+	color: white;
+	font-size: 100px;
+
+}
+
+#battle_background {
+
+}
+
+.battle {
+	padding: 10px;
 	width: 100%;
-	background-color: white;
+	background-color: black;
 	background-clip: border-box;
 	border: 1px solid rgba(0,0,0,0.125);
 	border-radius: 0.25rem;
-	box-shadow: 0 0.125rem 0.25rem rgba(0,0,0,0.075);
+	box-shadow: 0 0.125rem 0.75rem rgba(73,251,53,.5);
 	overflow: hidden;
 	margin-bottom: 20px;
 }
 
-.container .battle button {
-	color: blue;
+button {
+	font-family: "Roboto", sans-serif;
+	background-color: black;
+	border: 2px solid #49fb35;
+  	border-radius: 4px;
+  	color: #49fb35;
+  	padding: 15px 32px;
+  	text-align: center;
+  	text-decoration: none;
+  	display: inline-block;
+  	font-size: 25px;
+  	margin: 5px;
+  	transition-duration: 0.4s;
 }
 
-.container .battle p {
+button:hover {
+  background-color: #49fb35; /* Green */
+  color: black;
+
+}
+
+
+
+.battle h1 {
+	color: white;
+	text-shadow: 0 0.125rem 0.25rem rgba(73,251,53,1);
+}
+.battle p, h2 {
 	text-transform: uppercase;
 	font-weight: bold;
-	color: white;
+	color: #49fb35;
 	letter-spacing: 4px;
 	text-shadow: 0 0.125rem 0.25rem rgba(0,0,0,0.4);
+	margin: 5px;
 }
 
 
